--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,8 +13,8 @@ jobs:
       run:
         shell: bash
     steps:
-    - name: Install g++-20 
-      run: sudo apt-get install g++-20
+      - name: Install google test and g++-20
+      run: sudo apt-get install libgtest-dev googletest googletest-tools google-mock g++-20
 
     - name: Checkout repository
       uses: actions/checkout@v3
