--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,10 +26,10 @@ jobs:
       run: cmake --build build
 
     - name: CMake release test
-      run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test
+      run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target tests
     
     - name: CMake debug build
       run: cmake --build debug
 
     - name: CMake debug test
-      run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build debug --target test
+      run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build debug --target tests
