--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
       run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target tests
     
     - name: CMake debug build
-      run: cmake --build --config Debug
+      run: cmake --build build --config Debug  
 
     - name: CMake debug test
-      run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target tests
+      run: env CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --config Debug --target tests
