--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,13 +26,13 @@ jobs:
     - name: CMake Build (Release)
       run: |
         cmake -S . -B build/release -DCMAKE_BUILD_TYPE=Release
-        cmake --build build/release --target tests/unit
+        cmake --build build/release
         cd build/release
         ctest --output-on-failure
 
     - name: CMake Build (Debug)
       run: |
         cmake -S . -B build/debug -DCMAKE_BUILD_TYPE=Debug
-        cmake --build build/debug --target tests/unit
+        cmake --build build/debug
         cd build/debug
         ctest --output-on-failure
