--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 link_directories(/usr/local/lib)
 
 find_package(GTest REQUIRED) 
+enable_testing()
 
 set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/inc)
 set(SRC_DIR     ${PROJECT_SOURCE_DIR}/src)
