--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.11)
-
 project(matrix)
 
 set(CMAKE_CXX_STANDARD          20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-link_directories(/usr/local/lib)
-
-find_package(GTest REQUIRED) 
+find_package(GTest REQUIRED)
 enable_testing()
 
 set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/inc)
@@ -18,15 +15,15 @@ aux_source_directory(src SRC_FILES)
 add_executable(matrix ${SRC_FILES})
 
 target_include_directories(matrix
-                           PRIVATE 
-                           ${INCLUDE_DIR}
-                           ${GTEST_INCLUDE_DIRS}
+    PRIVATE 
+    ${INCLUDE_DIR}
+    ${GTEST_INCLUDE_DIRS}
 )
 
 set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -Wpedantic -g -O0 -DDEBUG \
-                           -Wmissing-declarations -Wcast-align     \
-                           -Wunused -Wshadow -Wsign-conversion     \
-                           -fsanitize=address -fsanitize=undefined")
+                          -Wmissing-declarations -Wcast-align      \
+                          -Wunused -Wshadow -Wsign-conversion      \
+                          -fsanitize=address -fsanitize=undefined")
 
 set_target_properties(
     matrix PROPERTIES
@@ -36,4 +33,4 @@ set_target_properties(
 
 add_subdirectory(tests)
 
-target_link_libraries(matrix gtest gtest_main)
+target_link_libraries(matrix ${GTEST_BOTH_LIBRARIES})
