--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: CI for CMake Project
+name: Matrix
 on:
   push:
     branches:
@@ -15,13 +15,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Google Test and G++
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgtest-dev cmake g++
-        cd /usr/src/gtest
-        sudo cmake CMakeLists.txt
-        sudo make
-        sudo cp lib/*.a /usr/lib
+      run: sudo apt-get install -y libgtest-dev cmake g++
 
     - name: CMake Build (Release)
       run: |
