fix matrix ctors, fix cmake, add unit tests for matrix copy ctor and copy assignment

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,21 +8,21 @@ endif()
 
 find_package(GTest REQUIRED)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(SOURCES_FOR_TESTING
     ../src/double_compare.cpp
 )
 
+set(HEADERS 
+    unit/controllanle.hpp)
 aux_source_directory(unit UNIT_TESTS)
 
 add_executable(unit_tests ${SOURCES_FOR_TESTING} ${UNIT_TESTS})
 
-target_include_directories(unit_tests PRIVATE ${INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
+target_include_directories(unit_tests PRIVATE ${INCLUDE_DIR} ${GTEST_INCLUDE_DIRS} ${HEADERS})
 
 enable_testing()
 
+target_compile_features(unit_tests PUBLIC cxx_std_20)
 target_link_libraries(unit_tests ${GTEST_BOTH_LIBRARIES})
 
 add_test(NAME unit_tests COMMAND unit_tests)
